frame/support/test/tests/derive_no_bound_ui/default_no_attribute.stderr
error: no default declared, make a variant default by placing `#[default]` above it
 --> tests/derive_no_bound_ui/default_no_attribute.rs:6:6
  |
6 | enum Foo<T: Config> {
  |      ^^^
