frame/support/test/tests/derive_no_bound_ui/default_no_attribute.rs
trait Config {
	type C;
}

#[derive(frame_support::DefaultNoBound)]
enum Foo<T: Config> {
	Bar(T::C),
	Baz,
}

fn main() {}
